--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,6 @@
       <groupId>org.glassfish.jersey.core</groupId>
       <artifactId>jersey-client</artifactId>
       <version>2.25.1</version>
-      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.glassfish.jersey.ext</groupId>
@@ -178,6 +177,11 @@
       <groupId>net.karneim</groupId>
       <artifactId>pojobuilder</artifactId>
       <version>3.5.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jgit</groupId>
+      <artifactId>org.eclipse.jgit</artifactId>
+      <version>3.7.1.201504261725-r</version>
     </dependency>
 
     <!-- test dependencies -->
