--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
       <artifactId>ssh-credentials</artifactId>
       <version>1.11</version>
     </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>display-url-api</artifactId>
+      <version>0.2</version>
+    </dependency>
 
     <!-- rest client dependencies -->
     <dependency>
