Mark jgit as provided to use the jar from the git-client plugin

--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,7 @@
       <groupId>org.eclipse.jgit</groupId>
       <artifactId>org.eclipse.jgit</artifactId>
       <version>3.7.1.201504261725-r</version>
+      <scope>provided</scope>
     </dependency>
 
     <!-- test dependencies -->
